--- a/task0002/HTML/作业0002.html
+++ b/task0002/HTML/作业0002.html
@@ -38,7 +38,7 @@
             border-radius: 5px;
             font-size: 28px;
             margin: 15px;
-            color: #4c8bf5;
+            color: #000000;
             outline: none;
         }
         .btn-box2{
@@ -84,13 +84,17 @@
         img.setAttribute("src","../images/bw.gif");
         a.style.backgroundImage="url(../images/bw-bg.png)";
         btn1.style.backgroundImage="url(../images/btn-blue.png)";
-        btn2.style.backgroundImage="url(../images/btn-gray.png)"
+        btn2.style.backgroundImage="url(../images/btn-gray.png)";
+        btn1.style.color="#000000";
+        btn2.style.color="#4c8bf5"
         };
     btn2.onclick=function () {
         img.setAttribute("src","../images/xx.gif");
         a.style.backgroundImage="url(../images/xx-bg.png)";
         btn1.style.backgroundImage="url(../images/btn-gray.png)";
-        btn2.style.backgroundImage="url(../images/btn-blue.png)"
+        btn2.style.backgroundImage="url(../images/btn-blue.png)";
+        btn1.style.color="#4c8bf5";
+        btn2.style.color="#000000"
     }
 </script>
 </body>
